# ThermostatConnecte

./: LICENSE  readme.md
ESP32/main/: CMakeLists.txt  Kconfig.projbuild  config.h  http.c  http.h  thermostat.c  wifi.c
ESP32/main/LM35/: LM35.c
ESP32/main/TMP175/: info.h
ESP32/main/controller/configuration/: handlers.c  handlers.h  storage.c  storage.h
ESP32/main/controller/estimator/: estimator.c  estimator.h
ESP32/main/controller/hysteresis/: hysteresis.c  hysteresis.h
ESP32/main/controller/prediction/: prediction.c  prediction.h
ESP32/main/device/BUS_SPI/: CMakeLists.txt
ESP32/main/device/LED/: LED.c  LED.h
ESP32/main/device/LM35/: LM35.h
ESP32/main/device/ONE_WIRE/: CMakeLists.txt  onewire.c
ESP32/main/device/ONE_WIRE/include/: onewire.h
ESP32/main/device/RFM12/: RFM12.c
ESP32/main/device/RFM12/include/: RFM12.h
ESP32/main/device/TMP175/TMP175 Micros-Designs/Include/: Hardware_i2c.h  TMP175.h
ESP32/main/device/TMP175_alt/: tmp175.c
ESP32/main/device/pushbutton/: pushbutton.c  pushbutton.h
ESP32/main/device/relay/: relay.c
ESP32/main/network/http/: http.c  http.h
ESP32/main/network/wifi/: wifi.c  wifi.h
ESP32/main/pages/: pages.c  pages.h
ESP32_hw2/main/: CMakeLists.txt  Kconfig.projbuild  config.h  hardware.c  interface.c  serveur.c  thermostat.c
ESP32_hw2/main/controller/configuration/: .configuration.c.swp  handlers.c  handlers.h  storage.c  storage.h
ESP32_hw2/main/controller/estimator/: estimator.c
ESP32_hw2/main/controller/hysteresis/: hysteresis.c  hysteresis.h
ESP32_hw2/main/device/BUS_SPI/: bus_spi.c
ESP32_hw2/main/device/BUS_SPI/include/: bus_spi.h
ESP32_hw2/main/device/LED/: LED.c
ESP32_hw2/main/device/LM35/: LM35.c
ESP32_hw2/main/device/ONE_WIRE/: onewire.c
ESP32_hw2/main/device/RFM12/: Kconfig.projbuild
ESP32_hw2/main/device/RFM12/include/: .RFM12.h.swp
ESP32_hw2/main/device/TMP175/: TMP75.c  TMP75.h
ESP32_hw2/main/device/TMP175_alt/: tmp175.h
ESP32_hw2/main/device/relay/: relay.c  relay.h
ESP32_hw2/main/include/: OSX_RPI_ESP.h  maison.h
ESP32_hw2/main/network/http/: http.c
(+43 files in other folders)
